--- a/Quiz_Master.vcxproj
+++ b/Quiz_Master.vcxproj
@@ -128,14 +128,20 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Quiz_Master.cpp" />
-    <ClCompile Include="source\MyString.cpp" />
-    <ClCompile Include="source\Utils.cpp" />
+    <ClCompile Include="source\helpers\MyString.cpp" />
+    <ClCompile Include="source\helpers\Utils.cpp" />
+    <ClCompile Include="source\questions\Question.cpp" />
+    <ClCompile Include="source\questions\SingleChoiceQuestion.cpp" />
+    <ClCompile Include="source\questions\TrueOrFalseQuestion.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="headers\Constants.h" />
-    <ClInclude Include="headers\MyString.h" />
-    <ClInclude Include="headers\Utils.h" />
-    <ClInclude Include="headers\Vector.hpp" />
+    <ClInclude Include="headers\helpers\Constants.h" />
+    <ClInclude Include="headers\helpers\MyString.h" />
+    <ClInclude Include="headers\helpers\Utils.h" />
+    <ClInclude Include="headers\helpers\Vector.hpp" />
+    <ClInclude Include="headers\questions\Question.h" />
+    <ClInclude Include="headers\questions\SingleChoiceQuestion.h" />
+    <ClInclude Include="headers\questions\TrueOrFlaseQuestion.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
