Added User and Factories

--- a/Quiz_Master.vcxproj
+++ b/Quiz_Master.vcxproj
@@ -127,6 +127,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="source\questions\MultipleChoiceQuestion.cpp" />
+    <ClCompile Include="source\Report.cpp" />
+    <ClCompile Include="source\users\Player.cpp" />
+    <ClCompile Include="source\questions\QuestionFactory.cpp" />
     <ClCompile Include="source\questions\QuestionsRepository.cpp" />
     <ClCompile Include="Quiz_Master.cpp" />
     <ClCompile Include="source\helpers\MyString.cpp" />
@@ -136,6 +140,9 @@
     <ClCompile Include="source\questions\ShortAnswerQuestion.cpp" />
     <ClCompile Include="source\questions\SingleChoiceQuestion.cpp" />
     <ClCompile Include="source\questions\TrueOrFalseQuestion.cpp" />
+    <ClCompile Include="source\users\User.cpp" />
+    <ClCompile Include="source\users\UserFactory.cpp" />
+    <ClCompile Include="source\Time.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="headers\helpers\Constants.h" />
@@ -149,6 +156,13 @@
     <ClInclude Include="headers\questions\SingleChoiceQuestion.h" />
     <ClInclude Include="headers\questions\TrueOrFlaseQuestion.h" />
     <ClInclude Include="headers\questions\QuestionsRepository.h" />
+    <ClInclude Include="headers\questions\QuestionFactory.h" />
+    <ClInclude Include="headers\users\User.h" />
+    <ClInclude Include="headers\users\UserFactory.h" />
+    <ClInclude Include="headers\users\Player.h" />
+    <ClInclude Include="headers\Report.h" />
+    <ClInclude Include="headers\Time.h" />
+    <ClInclude Include="headers\questions\MultipleChoiceQuestion.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
