--- a/Quiz_Master.vcxproj
+++ b/Quiz_Master.vcxproj
@@ -127,7 +127,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="source\quizes\services\QuizService.cpp" />
+    <ClCompile Include="source\services\MessageService.cpp" />
+    <ClCompile Include="source\commands\RemoveQuizCommand.cpp" />
+    <ClCompile Include="source\services\ReportService.cpp" />
+    <ClCompile Include="source\commands\RejectQuizCommand.cpp" />
+    <ClCompile Include="source\services\QuizService.cpp" />
     <ClCompile Include="source\commands\ApproveQuizCommand.cpp" />
     <ClCompile Include="source\commands\LogoutCommand.cpp" />
     <ClCompile Include="source\commands\LoginCommand.cpp" />
@@ -159,6 +163,7 @@
     <ClCompile Include="source\challenges\UserChallenge.cpp" />
     <ClCompile Include="source\users\UserRepository.cpp" />
     <ClCompile Include="source\helpers\Validate.cpp" />
+    <ClCompile Include="source\commands\ViewReportsCommand.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="headers\commands\ApproveQuizCommand.h" />
@@ -195,7 +200,12 @@
     <ClInclude Include="headers\helpers\Validate.h" />
     <ClInclude Include="headers\commands\LoginCommand.h" />
     <ClInclude Include="headers\commands\LogoutCommand.h" />
-    <ClInclude Include="headers\quizes\services\QuizService.h" />
+    <ClInclude Include="headers\services\QuizService.h" />
+    <ClInclude Include="headers\commands\RejectQuizCommand.h" />
+    <ClInclude Include="headers\commands\ViewReportsCommand.h" />
+    <ClInclude Include="headers\services\ReportService.h" />
+    <ClInclude Include="headers\commands\RemoveQuizCommand.h" />
+    <ClInclude Include="headers\services\MessageService.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
